--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,15 @@
 {
     "cmake.sourceDirectory": "/home/braer/dev/atomix",
     "cmake.configureArgs": [
-        "-DCMAKE_PREFIX_PATH=/home/braer/Qt/6.5.3/gcc_64/"
+        "-DCMAKE_PREFIX_PATH=/home/braer/Qt/6.5.3/gcc_64/",
+        "-DXKB_INCLUDE_DIR=/usr/local/include/xcb/",
+        "-DXKB_LIBRARY=/usr/local/"
     ],
     "C_Cpp.default.compilerPath": "/usr/bin/g++",
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "C_Cpp.errorSquiggles": "enabled",
     "files.associations": {
+        "shader.vert": "glsl",
         "ostream": "cpp",
         "array": "cpp",
         "atomic": "cpp",
@@ -68,6 +71,8 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp"
     }
 }
