--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(Qt6 REQUIRED COMPONENTS Core Widgets OpenGL OpenGLWidgets Concurren
 find_package(TBB REQUIRED COMPONENTS tbb)
 
 add_executable(atomix main.cpp quaternion.cpp shaderobj.cpp program.cpp mainwindow.cpp GWidget.cpp configparser.cpp wavemanager.cpp cloudmanager.cpp manager.cpp)
-# set_source_files_properties(cloudmanager.cpp PROPERTIES COMPILE_OPTIONS "-O2")
+set_source_files_properties(cloudmanager.cpp PROPERTIES COMPILE_OPTIONS "-O2")
 
 target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::OpenGL Qt6::OpenGLWidgets Qt6::Concurrent tbb)
 
