--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
     "cmake.sourceDirectory": "/Users/braer/dev/atomix",
     "cmake.configureArgs": [
-        "-DCMAKE_PREFIX_PATH=/home/braer/Qt/6.5.3/gcc_64/",
         "-DXKB_INCLUDE_DIR=/usr/local/include/xcb/",
         "-DXKB_LIBRARY=/usr/local/"
     ],
-    "C_Cpp.default.compilerPath": "/usr/bin/g++",
+    "C_Cpp.default.systemIncludePath": [
+        "/user/local/include"
+    ],
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "C_Cpp.errorSquiggles": "enabled",
     "files.associations": {
