Implementing basic Vulkan flow that I will have to refactor into ProgramVK. Also, Codeium is amazing, and I am now paying for Pro. Good lord. (Vulkan is tedious)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,5 +73,6 @@
         "fstream": "cpp",
         "iomanip": "cpp",
         "*.wave": "zsh"
-    }
+    },
+    "C_Cpp.default.compilerPath": "/usr/bin/g++"
 }
