--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,5 +75,6 @@
         "fstream": "cpp",
         "iomanip": "cpp",
         "*.wave": "zsh"
-    }
+    },
+    "C_Cpp.default.compilerPath": "/usr/bin/clang++"
 }
