--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,10 @@
 {
     "cmake.sourceDirectory": "/Users/braer/dev/atomix",
-    "cmake.configureArgs": [
-        "-DXKB_INCLUDE_DIR=/usr/local/include/xcb/",
-        "-DXKB_LIBRARY=/usr/local/"
+    "cmake.configureArgs": [        // "-DXKB_INCLUDE_DIR=/usr/local/include/xcb/",
+
     ],
     "C_Cpp.default.systemIncludePath": [
-        "/user/local/include"
+        "/usr/local/include",
     ],
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "C_Cpp.errorSquiggles": "enabled",
