--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.0.0...3.5)
-project(atomix VERSION 0.1.0 LANGUAGES C CXX)
+project(atomix VERSION 0.1.0 LANGUAGES CXX)
 add_subdirectory(src)
-target_compile_options(atomix PRIVATE -std=c++23 -I/usr/local/include)
+target_compile_features(atomix PUBLIC cxx_std_23)
