[Checkpoint] Builds on MacOS!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,17 +24,17 @@ if(DEFINED USING_QVULKAN)
     find_package(glslang CONFIG REQUIRED)
     add_executable(atomix main.cpp quaternion.cpp shaderobj.cpp mainwindow.cpp configparser.cpp manager.cpp wavemanager.cpp cloudmanager.cpp slideswitch.cpp programVK.cpp vkwindow.cpp)
     add_compile_definitions(USING_QVULKAN)
-    target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Concurrent tbb glslang::glslang glslang::SPIRV glslang::glslang-default-resource-limits)
+    target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Concurrent glslang::glslang glslang::SPIRV glslang::glslang-default-resource-limits oneDPL TBB::tbb TBB::tbbmalloc Vulkan::Vulkan)
 elseif(DEFINED USING_QOPENGL)
     find_package(Qt6 REQUIRED COMPONENTS Core Widgets OpenGL OpenGLWidgets Concurrent)
     add_executable(atomix main.cpp quaternion.cpp shaderobj.cpp mainwindow.cpp configparser.cpp manager.cpp wavemanager.cpp cloudmanager.cpp slideswitch.cpp programGL.cpp glwidget.cpp)
     add_compile_definitions(USING_QOPENGL)
-    target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::OpenGL Qt6::OpenGLWidgets Qt6::Concurrent tbb)
+    target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::OpenGL Qt6::OpenGLWidgets Qt6::Concurrent oneDPL TBB::tbb TBB::tbbmalloc)
 endif()
 # set_source_files_properties(cloudmanager.cpp PROPERTIES COMPILE_OPTIONS "-O2")
 
 target_include_directories(atomix PRIVATE ${INCLUDE_BASE} ${VULKAN_SDK} ${Qt6_DIR})
-target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::OpenGL Qt6::OpenGLWidgets Qt6::Concurrent Qt6::Gui oneDPL TBB::tbb TBB::tbbmalloc Vulkan)
+# target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::OpenGL Qt6::OpenGLWidgets Qt6::Concurrent Qt6::Gui oneDPL TBB::tbb TBB::tbbmalloc Vulkan)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
