--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ if(DEFINED USING_QVULKAN)
     find_package(glslang CONFIG REQUIRED)
     add_executable(atomix main.cpp quaternion.cpp shaderobj.cpp mainwindow.cpp configparser.cpp manager.cpp wavemanager.cpp cloudmanager.cpp slideswitch.cpp programVK.cpp vkwindow.cpp)
     add_compile_definitions(USING_QVULKAN)
-    target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Concurrent tbb glslang::glslang glslang::SPIRV glslang::glslang-default-resource-limits)
+    target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Concurrent tbb glslang::glslang glslang::SPIRV glslang::glslang-default-resource-limits TBB::tbb)
 elseif(DEFINED USING_QOPENGL)
     find_package(Qt6 REQUIRED COMPONENTS Core Widgets OpenGL OpenGLWidgets Concurrent)
     add_executable(atomix main.cpp quaternion.cpp shaderobj.cpp mainwindow.cpp configparser.cpp manager.cpp wavemanager.cpp cloudmanager.cpp slideswitch.cpp programGL.cpp glwidget.cpp)
