Apparently Qt manages the commandBuffer! We are now launching, though the model does not render yet. Fixed render count/offsets, attributes, and clearColor errors.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,9 @@ set(CMAKE_AUTOMOC ON)
 set(Qt6_DIR "/home/braer/Qt/6.5.3/gcc_64/lib/cmake/Qt6")
 
 set(USING_QVULKAN 1)
-set(MACOS 1)
+set(MACOS 0)
 
-find_package(TBB REQUIRED COMPONENTS tbb)
+find_package(TBB REQUIRED COMPONENTS tbb tbbmalloc)
 # set_source_files_properties(cloudmanager.cpp PROPERTIES COMPILE_OPTIONS "-O2")
 
 if(DEFINED USING_QVULKAN)
@@ -12,7 +12,7 @@ if(DEFINED USING_QVULKAN)
     find_package(glslang CONFIG REQUIRED)
     add_executable(atomix main.cpp quaternion.cpp shaderobj.cpp mainwindow.cpp configparser.cpp manager.cpp wavemanager.cpp cloudmanager.cpp slideswitch.cpp programVK.cpp vkwindow.cpp)
     add_compile_definitions(USING_QVULKAN)
-    target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Concurrent tbb glslang::glslang glslang::SPIRV glslang::glslang-default-resource-limits TBB::tbb)
+    target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Concurrent tbb glslang::glslang glslang::SPIRV glslang::glslang-default-resource-limits TBB::tbb TBB::tbbmalloc)
 elseif(DEFINED USING_QOPENGL)
     find_package(Qt6 REQUIRED COMPONENTS Core Widgets OpenGL OpenGLWidgets Concurrent)
     add_executable(atomix main.cpp quaternion.cpp shaderobj.cpp mainwindow.cpp configparser.cpp manager.cpp wavemanager.cpp cloudmanager.cpp slideswitch.cpp programGL.cpp glwidget.cpp)
