--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,18 +1,16 @@
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_PREFIX_PATH "/usr/local/Qt-6.5.3")
-# set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE Debug)
 set(Qt6_DIR "~/Qt/6.5.3/macos")
 set(Qt6_DIR "/usr/local/Qt-6.5.3/")
 set(INCLUDE_BASE "/usr/local/include")
 set(VULKAN_SDK "/Users/braer/VulkanSDK/1.3.296.0/macOS")
-# set(GLM_INCLUDE_DIR "/usr/local/include/glm")
-# set(TBB_INCLUDE_DIR "/usr/local/include/oneapi")
+set(ENV{VULKAN_SDK} ${VULKAN_SDK})
 
 set(DYLD_LIBRARY_PATH ${VULKAN_SDK}/lib ${DYLD_LIBRARY_PATH})
 set(VK_ADD_LAYER_PATH ${VULKAN_SDK}/share/vulkan/explicit_layer.d)
 set(VK_ICD_FILENAMES ${VULKAN_SDK}/share/vulkan/icd.d/MoltenVK_icd.json)
 set(VK_DRIVER_FILES ${VULKAN_SDK}/share/vulkan/icd.d/MoltenVK_icd.json)
-set(ENV{VULKAN_SDK} "/home/braer/VulkanSDK/1.3.296.0")
 set(ENV{VK_LOADER_DEBUG} "error,warn,layer,info")
 
 set(USING_QVULKAN 1)
