--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,7 @@
 set(CMAKE_AUTOMOC ON)
-set(CMAKE_PREFIX_PATH "/usr/local/Qt-6.5.3")
+set(CMAKE_PREFIX_PATH "/usr/local/Qt-6.8.0")
 set(CMAKE_BUILD_TYPE Debug)
-set(Qt6_DIR "~/Qt/6.5.3/macos")
-set(Qt6_DIR "/usr/local/Qt-6.5.3/")
+set(Qt6_DIR "/Users/braer/Qt/6.8.0/macos")
 set(INCLUDE_BASE "/usr/local/include")
 set(VULKAN_SDK "/Users/braer/VulkanSDK/1.3.296.0/macOS")
 set(ENV{VULKAN_SDK} ${VULKAN_SDK})
