Refactor config, update Qt includes, add resize event to SlideSwitch, and improve UI layout.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 build/
 .DS_Store
+.cache/clangd/index/BS_thread_pool.hpp.5610089BDB110A0A.idx
+.cache/clangd/index/cloudmanager.cpp.82794F8D5C6538D3.idx
+.cache/clangd/index/cloudmanager.hpp.B235DCB4F2A30A24.idx
+.cache/clangd/index/configparser.cpp.54B5EB9588A84B1C.idx
+.cache/clangd/index/configparser.hpp.CC86D79045B18E06.idx
+.cache/clangd/index/global.hpp.067544D73BA080EA.idx
+.cache/clangd/index/main.cpp.9A55A71713753119.idx
+.cache/clangd/index/mainwindow.cpp.83D8DBBA31034211.idx
+.cache/clangd/index/mainwindow.hpp.E708F9DDB7E26324.idx
+.cache/clangd/index/manager.cpp.A1FAE64B400053C4.idx
+.cache/clangd/index/manager.hpp.1C78EF445C28D43B.idx
+.cache/clangd/index/programVK.cpp.EB4322480A26F135.idx
+.cache/clangd/index/programVK.hpp.19CF98CBACF7250E.idx
+.cache/clangd/index/quaternion.cpp.08612ADF32762837.idx
+.cache/clangd/index/quaternion.hpp.2F5279F120F0E3D4.idx
+.cache/clangd/index/shaderobj.cpp.ED676E8F6A0A484C.idx
+.cache/clangd/index/shaderobj.hpp.B5DC78C9451DC494.idx
+.cache/clangd/index/slideswitch.cpp.30382AE3A479B3DE.idx
+.cache/clangd/index/slideswitch.hpp.84E8177C5C2CAE79.idx
+.cache/clangd/index/vkwindow.cpp.8E43BB1714224B49.idx
+.cache/clangd/index/vkwindow.hpp.B849C70E62D3C629.idx
+.cache/clangd/index/wavemanager.cpp.AC41861448D86E85.idx
+.cache/clangd/index/wavemanager.hpp.F2B14EF22EC89E68.idx
