--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.10.0...3.30.0)
 project(atomix VERSION 0.1.0 LANGUAGES CXX)
 add_subdirectory(src)
 set (ENV{CMAKE_BUILD_PARALLEL_LEVEL} 8)
-target_compile_options(atomix PRIVATE -std=c++23 -ltbb)
+target_compile_options(atomix PRIVATE -std=c++23 -ltbb -Wall -Wextra -Wno-sign-compare)
