[Checkpoint] Ripped std::assoc_l* funcs for static reference to avoid macOS Boost fallback (4-10x slower). Added os/arch detection to set macOS bool dynamically instead of by define. Switched chrono to steady_clock to be xPlatform. Forced implicit threading.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@ if(DEFINED USING_QVULKAN)
     find_package(glslang CONFIG REQUIRED)
     find_package(spirv_cross_core CONFIG REQUIRED)
     find_package(spirv_cross_reflect CONFIG REQUIRED)
-    add_executable(atomix main.cpp quaternion.cpp shaderobj.cpp mainwindow.cpp configparser.cpp manager.cpp wavemanager.cpp cloudmanager.cpp slideswitch.cpp programVK.cpp vkwindow.cpp)
+    add_executable(atomix main.cpp quaternion.cpp special.cpp shaderobj.cpp mainwindow.cpp configparser.cpp manager.cpp wavemanager.cpp cloudmanager.cpp slideswitch.cpp programVK.cpp vkwindow.cpp)
     add_compile_definitions(USING_QVULKAN)
     target_link_libraries(atomix PRIVATE Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Concurrent tbb glslang::glslang glslang::SPIRV glslang::glslang-default-resource-limits spirv-cross-core spirv-cross-reflect TBB::tbb TBB::tbbmalloc)
 elseif(DEFINED USING_QOPENGL)
