LunarG VulkanSDK is broooooken. Linux's apt was fine, MacOS had homebrew, and I needed to learn about vcpkg for WIndows.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,6 @@
         "fstream": "cpp",
         "iomanip": "cpp",
         "*.wave": "zsh"
-    }
+    },
+    "C_Cpp.default.compilerPath": "/usr/bin/g++"
 }
