--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(atomix VERSION 0.1.0 LANGUAGES CXX)
 add_subdirectory(src)
 set (ENV{CMAKE_BUILD_PARALLEL_LEVEL} 8)
 target_compile_features(atomix PRIVATE cxx_std_23)
-target_compile_options(atomix PRIVATE -std=c++23 -ltbb -Wall -Wextra)
+# target_compile_options(atomix PRIVATE -std=c++23 -ltbb -Wall -Wextra)
