[Checkpoint] MSVC W4 Cleanup

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(CMAKE_AUTOMOC ON)
-set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE Release)
 
 set(LINUX 0)
 set(MACOS 0)
@@ -20,8 +20,7 @@ elseif(MACOS)
 elseif(WIN11)
     set(Qt6_DIR "C:/Qt/6.8.1/msvc2022_64")
     set(VULKAN_SDK "C:/VulkanSDK/1.3.296.0")
-    # set(glslang_DIR "C:/dev/vcpkg/installed/x64-windows/share/glslang")
-    list(APPEND CMAKE_PREFIX_PATH C:/dev/vcpkg/installed/x64-windows/share)
+    list(APPEND CMAKE_PREFIX_PATH "C:/dev/vcpkg/installed/x64-windows/share")
 endif()
 
 set(ENV{Qt6_DIR} ${Qt6_DIR})
