--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.10.0...3.30.0)
 project(atomix VERSION 0.1.0 LANGUAGES CXX)
 add_subdirectory(src)
 set (ENV{CMAKE_BUILD_PARALLEL_LEVEL} 8)
+# set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install")
 target_compile_features(atomix PRIVATE cxx_std_23)
 target_compile_options(atomix PRIVATE -std=c++23 -ltbb -Wall -Wextra)
